[gd_scene load_steps=7 format=2]

[ext_resource path="res://res/fonts/BRLNSR.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://main/panel-left/panel-left.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="panel-left" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel-container" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="panel-container"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1131.0
margin_bottom = 633.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titleLabel" type="RichTextLabel" parent="panel-container/vbox"]
margin_right = 1124.0
margin_bottom = 33.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Map Editor[/center]"
text = "Map Editor"
fit_content_height = true

[node name="hexMode" type="CheckButton" parent="panel-container/vbox"]
margin_top = 37.0
margin_right = 1124.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 4 )
text = "HEX-MODE"

[node name="save" type="Button" parent="panel-container/vbox"]
margin_top = 81.0
margin_right = 1124.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 2 )
text = "SAVE"

[node name="load" type="Button" parent="panel-container/vbox"]
margin_top = 110.0
margin_right = 1124.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 3 )
text = "LOAD"

[node name="spacer" type="MarginContainer" parent="panel-container/vbox"]
margin_top = 139.0
margin_right = 1124.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 25 )

[node name="Tiles" type="RichTextLabel" parent="panel-container/vbox"]
margin_top = 168.0
margin_right = 1124.0
margin_bottom = 201.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Tiles[/center]"
text = "Tiles"
fit_content_height = true

[connection signal="toggled" from="panel-container/vbox/hexMode" to="." method="_on_hexMode_toggled"]
[connection signal="pressed" from="panel-container/vbox/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="panel-container/vbox/load" to="." method="_on_load_pressed"]
